# voicestudiopro

./: .gitignore  README.md  VoiceStudioPro.spec  package-lock.json  package.json  pyproject.toml
app/: __init__.py
app/backend/: __init__.py  app_factory.py  main.py
app/backend/api/: __init__.py  audio_routes.py  export_routes.py  generation_routes.py  project_routes.py  qwen_compat_routes.py  runtime_routes.py  voice_routes.py
app/backend/core/: config.py  errors.py  paths.py
app/backend/jobs/: queue.py  schemas.py
app/backend/qwen/: engine.py  runtime_worker.py
app/backend/runtime/: detector.py  installer.py  models.py  torch_selector.py
app/backend/storage/: json_store.py  schemas.py
app/desktop/: __init__.py  main.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css  styles.css
frontend/src/components/: qwen-actions.tsx  qwen-status.tsx  voice-manager-drawer.tsx
frontend/src/components/ui/: dropdown-menu.tsx  popover.tsx  select.tsx  slider.tsx  speaker-avatar.tsx  tooltip.tsx
frontend/src/features/export/: ExportMenu.tsx  exportAudio.ts
frontend/src/features/onboarding/: Onboarding.tsx
frontend/src/features/projects/: ProjectsPanel.tsx  projectSession.ts
frontend/src/features/studio/: ScriptEditor.tsx  ScriptWorkspace.tsx  Studio.tsx  Timeline.tsx  TimelineFooter.tsx  VoicePanel.tsx  VoiceRuntimePanel.tsx  formatters.ts  paragraphModel.ts  types.ts  useGenerationQueue.ts  (+1 more)
frontend/src/lib/: apiClient.ts  projectsStore.ts
installer/: README.md
scripts/: build-exe.ps1  dev.mjs
tests/: test_desktop_main.py
(+5 files in other folders)
