[project]
name = "voicestudio-pro"
version = "0.1.0"
description = "Local-first QwenTTS production studio"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.32.1",
  "pydantic>=2.10.3",
  "python-multipart>=0.0.19",
  "pywebview>=5.3.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.4",
  "pytest>=8.3.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["app*"]
